Fix Opening times quick link and increase spacing for Order CTAs at the bottom of pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,11 @@ h2{
     color: var(--primary-color-base);
 }
 
+.page-bottom-cta{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
 /* Featured Items section */
 
 .swiper-wrapper {
